# lerpz-backend

./: .env.docker  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
migrations/: 20240607160804_user.sql
src/: auth.rs  config.rs  db.rs  error.rs  lib.rs  main.rs
src/middleware/: auth.rs  postgres.rs
src/models/: user.rs
src/routes/v1/: auth.rs  mod.rs
src/utils/: env.rs  mod.rs
src/utils/pwd/: error.rs  mod.rs  parts.rs  scheme_01.rs
src/utils/pwd/scheme/: error.rs  mod.rs  scheme_01.rs
src/utils/token/: builder.rs  claims.rs  decode.rs  error.rs  keys.rs  mod.rs  validator.rs
